--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,24 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>mlat-service</artifactId>
+        <groupId>ru.zagaynov</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.zagaynov</groupId>
-    <artifactId>mlat-service</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>server</module>
-        <module>shared</module>
-        <module>client</module>
-    </modules>
+    <artifactId>client</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.zagaynov</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -40,12 +44,12 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <outputDirectory>${basedir}</outputDirectory>
-                    <finalName>mlat-service</finalName>
+                    <finalName>client</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
-<!--                        <manifest>-->
-<!--                            <mainClass>main.Main</mainClass>-->
-<!--                        </manifest>-->
+                        <manifest>
+                            <mainClass>mlatclient.Client</mainClass>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
