--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -2,24 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>mlat-service</artifactId>
+        <groupId>ru.zagaynov</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.zagaynov</groupId>
-    <artifactId>mlat-service</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>server</module>
-        <module>shared</module>
-        <module>client</module>
-    </modules>
+    <artifactId>shared</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 
     <build>
         <plugins>
@@ -40,13 +35,8 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <outputDirectory>${basedir}</outputDirectory>
-                    <finalName>mlat-service</finalName>
+                    <finalName>shared</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <archive>
-<!--                        <manifest>-->
-<!--                            <mainClass>main.Main</mainClass>-->
-<!--                        </manifest>-->
-                    </archive>
                 </configuration>
             </plugin>
         </plugins>
