Add : DataCenter, Stations, Tram

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -15,6 +15,14 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>cn.404z</groupId>
+            <artifactId>clock</artifactId>
+            <version>2.2.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
